--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,83 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" android:background="#fff">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnget_otp"
-            android:layout_width="246dp"
-            android:layout_height="78dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="149dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginBottom="4dp"
-            android:text="Get otp"
-            app:layout_constraintBottom_toTopOf="@+id/etotp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                        <Button
+                            android:id="@+id/btn_customer_login"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:text="Customers Click Here" />
 
-        <EditText
-        android:id="@+id/etotp"
-        android:layout_width="241dp"
-        android:layout_height="60dp"
-            android:layout_marginStart="100dp"
-        android:layout_marginTop="250dp"
-        android:ems="10"
-        android:hint="Enter otp received"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.37"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnget_otp"
-            android:layout_marginLeft="100dp" />
+                        <Button
+                            android:id="@+id/btn_worker_login"
+                            android:layout_width="match_parent"
+                            android:layout_height="100dp"
+                            android:text="Professionals Click here" />
 
-        <EditText
-        android:id="@+id/etnumber"
-        android:layout_width="300dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:ems="10"
-        android:hint="Enter mobile number"
-        android:inputType="phone"
-        app:layout_constraintBottom_toTopOf="@+id/btnget_otp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+                        <Button
+                            android:id="@+id/btn_admin"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="ADMIN LOGIN" />
 
-        <Button
-            android:id="@+id/btnverify"
-            android:layout_width="175dp"
-            android:layout_height="69dp"
-            android:layout_marginStart="68dp"
-            android:layout_marginLeft="68dp"
-            android:layout_marginTop="368dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="66dp"
-            android:layout_marginBottom="8dp"
-            android:text="Verify otp"
+                </LinearLayout>
 
-            app:layout_constraintTop_toBottomOf="@+id/etotp" />
-
-    </RelativeLayout>
-
-</ScrollView>
+        </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
