--- a/app/src/main/res/layout/activity_admin_master.xml
+++ b/app/src/main/res/layout/activity_admin_master.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_admin">
+    tools:context=".admin_master">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="65dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,27 +18,20 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/et_name"
-                android:hint="Enter name of new admin."/>
+                android:id="@+id/et_master_id"
+                android:hint="Enter username here."/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/et_number"
-                android:hint="Enter mobile number here."
-                android:inputType="number"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_password"
-                android:hint="Enter password here." />
+                android:id="@+id/et_master_password"
+                android:hint="Enter master password."/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/btn_create_new_admin"
-                android:text="Create" />
+                android:id="@+id/btn_master_login"
+                android:text="Login."/>
 
         </LinearLayout>
     </ScrollView>
