--- a/app/src/main/res/layout/activity_admin_verify.xml
+++ b/app/src/main/res/layout/activity_admin_verify.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".add_admin">
+    tools:context=".admin_verify">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,30 +15,34 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <EditText
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/et_name"
-                android:hint="Enter name of new admin."/>
+                android:id="@+id/tv_name" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:id="@+id/tv_number"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/et_number"
-                android:hint="Enter mobile number here."
+                android:id="@+id/et_otp"
+                android:hint="Enter otp received here."
                 android:inputType="number"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
                 android:id="@+id/et_password"
-                android:hint="Enter password here." />
+                android:hint="Enter your password here."/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="65dp"
-                android:id="@+id/btn_create_new_admin"
-                android:text="Create" />
+                android:id="@+id/btn_verify_admin"
+                android:text="Verify."/>
 
         </LinearLayout>
     </ScrollView>
