--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -38,11 +38,9 @@
                 android:text="       Enter your Password" />
 
             <EditText
-                android:id="@+id/etpassword"
-                android:layout_width="347dp"
-                android:layout_height="48dp"
-                android:ems="10"
-                android:inputType="textPassword" />
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:id="@+id/etpassword"/>
 
             <Button
                 android:id="@+id/btn_submit_sigin"
