--- a/app/src/main/res/layout/activity_admin_options.xml
+++ b/app/src/main/res/layout/activity_admin_options.xml
@@ -1,45 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".admin_options">
 
-    <ScrollView
+
+    <Button
+        android:id="@+id/btn_customer_details"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="35dp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/imgadmin_options"
+        android:background="@color/airforceblue"
+        android:text="View all customer."
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="218dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <ImageView
+        android:id="@+id/imgadmin_options"
+        android:layout_width="407dp"
+        android:layout_height="203dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/customer2" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_customer_details"
-                android:text="View all customer."/>
+    <Button
+        android:id="@+id/btn_worker_details"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/btn_customer_details"
+        android:background="@color/airforceblue"
+        android:text="View all workers"
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="312dp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_worker_details"
-                android:text="View all workers."/>
+    <Button
+        android:id="@+id/btn_add_service"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/btn_worker_details"
+        android:background="@color/airforceblue"
+        android:text="Add a new service or edit existing services"
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="418dp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_add_service"
-                android:text="Add a new service or edit existing services."/>
+    <Button
+        android:id="@+id/btn_add_admin"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/btn_add_service"
+        android:background="@color/airforceblue"
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        android:text="Add new admin"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="516dp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_add_admin"
-                android:text="Add new admin."/>
 
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
