--- a/app/src/main/res/layout/activity_admin_verify.xml
+++ b/app/src/main/res/layout/activity_admin_verify.xml
@@ -1,50 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".admin_verify">
 
-    <ScrollView
+
+    <EditText
+        android:id="@+id/et_otp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/imgadmin_verify"
+        android:hint="Enter otp received here."
+        android:inputType="number"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="243dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/et_password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/et_otp"
+        android:hint="Enter your password here."
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="341dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/tv_name" />
+    <ImageView
+        android:id="@+id/imgadmin_verify"
+        android:layout_width="403dp"
+        android:layout_height="212dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/otp"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="4dp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/tv_number"/>
+    <Button
+        android:id="@+id/btn_verify_admin"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/et_password"
+        android:background="@color/airforceblue"
+        android:text="Verify."
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="472dp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_otp"
-                android:hint="Enter otp received here."
-                android:inputType="number"/>
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_password"
-                android:hint="Enter your password here."/>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_verify_admin"
-                android:text="Verify."/>
-
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
