--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -1,45 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".add_service">
 
-    <ScrollView
+
+    <EditText
+        android:id="@+id/et_new_service"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/imgadd_service"
+        android:hint="Add new service here."
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="258dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/et_salary"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/et_new_service"
+        android:hint="Enter salary here."
+        android:inputType="number"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="355dp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_new_service"
-                android:hint="Add new service here."/>
+    <ImageView
+        android:id="@+id/imgadd_service"
+        android:layout_width="387dp"
+        android:layout_height="225dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/salary"
+        tools:layout_editor_absoluteX="10dp"
+        tools:layout_editor_absoluteY="12dp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_salary"
-                android:hint="Enter salary here."
-                android:inputType="number"/>
+    <Button
+        android:id="@+id/btn_add_serv"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/et_salary"
+        android:background="@color/airforceblue"
+        android:textColor="@color/amber"
+        android:textSize="20dp"
+        android:text="Add "
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="482dp" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_add_serv"
-                android:text="Add."/>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </ListView>
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
