--- a/app/src/main/res/layout/activity_admin_master.xml
+++ b/app/src/main/res/layout/activity_admin_master.xml
@@ -1,39 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".admin_master">
 
-    <ScrollView
+
+    <EditText
+        android:id="@+id/et_master_id"
         android:layout_width="match_parent"
-        android:layout_height="65dp">
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/imgadmin_master"
+        android:hint="Enter username here."
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="270dp" />
+    <Button
+        android:id="@+id/btn_master_login"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Login "
+        android:layout_margin="35dp"
+        android:textSize="20dp"
+        android:layout_below="@+id/et_master_password"
+        android:background="@color/airforceblue"
+        android:textColor="@color/amber"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="462dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <EditText
+        android:id="@+id/et_master_password"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/et_master_id"
+        android:hint="Enter master password."
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="346dp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_master_id"
-                android:hint="Enter username here."/>
+    <ImageView
+        android:id="@+id/imgadmin_master"
+        android:layout_width="398dp"
+        android:layout_height="222dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/admin2" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/et_master_password"
-                android:hint="Enter master password."/>
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:id="@+id/btn_master_login"
-                android:text="Login."/>
 
-        </LinearLayout>
-    </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
