--- a/app/src/main/res/layout/activity_customer_registration.xml
+++ b/app/src/main/res/layout/activity_customer_registration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,106 +7,88 @@
     tools:context=".customer_registration">
 
 
-    <ScrollView
-        android:layout_width="399dp"
-        android:layout_height="631dp"
-        tools:layout_editor_absoluteX="-4dp"
-        tools:layout_editor_absoluteY="-9dp">
+    <EditText
+        android:id="@+id/etname"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/imgcustomer_registration"
+        android:ems="10"
+        android:hint="Enter Your Name"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="250dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+
+    <EditText
+        android:id="@+id/etusername"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/etname"
+        android:hint="Enter Your Username"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="190dp" />
 
 
-            <TextView
-                android:id="@+id/tvname"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:text="     Enter Your Name"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="25dp" />
+    <EditText
+        android:id="@+id/etemail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/etusername"
+        android:ems="10"
+        android:hint="Enter Your Email"
+        android:inputType="textEmailAddress"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="308dp" />
 
-            <EditText
-                android:id="@+id/etname"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="84dp" />
 
-            <TextView
-                android:id="@+id/tvusername"
-                android:layout_width="match_parent"
-                android:layout_height="65dp"
-                tools:text="    Enter User Name" />
+    <EditText
+        android:id="@+id/etpassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/etemail"
+        android:ems="10"
+        android:hint="Enter Your Password"
+        android:inputType="textPassword"
+        tools:layout_editor_absoluteX="-34dp"
+        tools:layout_editor_absoluteY="371dp" />
 
-            <EditText
-                android:id="@+id/etusername"
-                android:layout_width="match_parent"
-                android:layout_height="65dp" />
-            <TextView
-                android:id="@+id/tvEmail"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:text="    Enter Your Email"
-                tools:layout_editor_absoluteX="18dp"
-                tools:layout_editor_absoluteY="146dp" />
 
-            <EditText
-                android:id="@+id/etemail"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:ems="10"
-                android:inputType="textEmailAddress"
-                tools:layout_editor_absoluteX="18dp"
-                tools:layout_editor_absoluteY="215dp" />
+    <EditText
+        android:id="@+id/etphone"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/etpassword"
+        android:ems="10"
+        android:hint="Enter Your Phone No"
+        android:inputType="phone"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="431dp" />
 
-            <TextView
-                android:id="@+id/tvpassword"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:text="    Enter password"
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="293dp" />
+    <ImageView
+        android:id="@+id/imgcustomer_registration"
+        android:layout_width="407dp"
+        android:layout_height="163dp"
+        android:src="@drawable/signup3"
+        tools:layout_editor_absoluteX="4dp" />
 
-            <EditText
-                android:id="@+id/etpassword"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:ems="10"
-                android:inputType="textPassword"
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="359dp" />
+    <Button
+        android:id="@+id/bsignup"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/etphone"
+        android:background="@color/airforceblue"
+        android:text="     Signup"
+        android:textColor="@color/amber"
+        android:textSize="35dp"
+        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteY="518dp" />
 
-            <TextView
-                android:id="@+id/tvphone"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:text="    Enter Your Phone No"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="428dp" />
 
-            <EditText
-                android:id="@+id/etphone"
-                android:layout_width="375dp"
-                android:layout_height="40dp"
-                android:ems="10"
-                android:inputType="phone"
-                tools:layout_editor_absoluteX="20dp"
-                tools:layout_editor_absoluteY="491dp" />
 
-            <Button
-                android:id="@+id/bsignup"
-                android:layout_width="348dp"
-                android:layout_height="49dp"
-                android:text="     Signup"
-                tools:layout_editor_absoluteX="48dp"
-                tools:layout_editor_absoluteY="538dp" />
-
-        </LinearLayout>
-
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
