--- a/app/src/main/res/layout/activity_worker_display.xml
+++ b/app/src/main/res/layout/activity_worker_display.xml
@@ -9,8 +9,8 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lv_worker_display">
+        android:id="@+id/lvd2"></ListView>
 
-    </ListView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
