--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="richblack">#010203</color>
+    <color name="flowergirl">#F498AD</color>
+    <color name="airforceblue">#5D8AA8</color>
+    <color name="amber">#FFBF00</color>
+    <color name="black">#000000</color>
+    <color name="blue">#0000FF</color>
+    <color name="flame">#E25822</color>
 </resources>
