--- a/app/src/main/res/layout/admin_list_layout.xml
+++ b/app/src/main/res/layout/admin_list_layout.xml
@@ -5,13 +5,13 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:id="@+id/tv_admin_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:id="@+id/tv_admin_number"/>
 
 </LinearLayout>
