--- a/app/src/main/res/layout/services_list_layout.xml
+++ b/app/src/main/res/layout/services_list_layout.xml
@@ -9,4 +9,9 @@
         android:id="@+id/tv_service_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_service_salary"/>
+
 </LinearLayout>
