--- a/app/src/main/res/layout/activity_worker_login.xml
+++ b/app/src/main/res/layout/activity_worker_login.xml
@@ -1,41 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".worker_login">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/etnumber"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="30dp"
+                android:layout_below="@+id/mobile_otp"
                 android:ems="10"
                 android:hint="Enter mobile number"
                 android:inputType="phone"
                 app:layout_constraintVertical_bias="0.0" />
 
+    <ImageView
+        android:id="@+id/mobile_otp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/mobileotp" />
+
             <Button
                 android:id="@+id/btnget_otp"
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_marginTop="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="25dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:textSize="20dp"
+                android:layout_below="@+id/etnumber"
                 android:text="Get otp" />
 
             <EditText
                 android:id="@+id/etotp"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:layout_marginTop="35dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:layout_below="@id/btnget_otp"
                 android:ems="10"
                 android:hint="Enter otp received"
                 android:inputType="numberPassword" />
@@ -43,12 +49,14 @@
             <Button
                 android:id="@+id/btnverify"
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_marginTop="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="30dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:textSize="20dp"
+                android:layout_below="@+id/etotp"
                 android:text="Verify otp" />
 
-        </LinearLayout>
 
-    </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
