--- a/app/src/main/res/layout/activity_admin_display.xml
+++ b/app/src/main/res/layout/activity_admin_display.xml
@@ -6,18 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".admin_display">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:id="@+id/lv_admin_display"/>
 
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:id="@+id/lv_admin_display"
-                android:layout_above="@+id/btn_admin_master"/>
-
-        </LinearLayout>
 
     </ScrollView>
-
     <Button
         android:id="@+id/btn_admin_master"
         android:layout_width="match_parent"
