--- a/app/src/main/res/layout/activity_worker_registration.xml
+++ b/app/src/main/res/layout/activity_worker_registration.xml
@@ -65,7 +65,10 @@
             <Button
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@color/airforceblue"
+                android:textColor="@color/amber"
+                android:textSize="20dp"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginBottom="25dp"
                 android:text="Submit"
